# ribbit-desktop-pet

./: .env.example  .gitignore  AUDIT_REPORT.md  MVP_PLAN.md  PRD.md  README.md  TRD.md  architecture_specification.md  pyproject.toml  requirements.txt
assets/sprites/cockroach/: roach_swarm.json
assets/sprites/default/: metadata.json
assets/sprites/modi/: mascot_spritesheet_map.json  metadata.json  persona.json
assets/wake/: README.md  hey_ribb_it.onnx
docs/: DECISIONS.md  WAKE_WORD_TRAINING.md
src/: config.py  constants.py  event_bus.py  main.py
src/agent/: actions.py  agent.py  react.py  vision_click.py
src/ai/: context_engine.py  orchestrator.py  persona.py  prompts.py  vision.py
src/ai/providers/: base.py  deepgram.py  deepgram_tts.py  gemini.py  (+3 more)
src/animation/: sprite_loader.py  state_machine.py
src/core/: application.py  audio_recorder.py  composition.py  conversation.py  scheduler.py  tts.py
src/observer/: hotkey.py  telemetry.py  wake_word.py  win32_hook.py
src/physics/: collision.py  gravity.py  movement.py
src/plugins/: base.py  example_plugin.py  manager.py
src/ui/: context_menu.py  renderer.py  roach_window.py  speech_bubble.py  window.py
src/utils/: generate_debug_sprites.py  logger.py  win32.py
tests/: conftest.py  test_agent.py  test_conversation.py  test_core.py  test_integration.py  test_mascot_modi.py  test_modules.py  test_panic.py  test_persona.py  test_phase2_3.py  test_phase5.py  test_phase6_7.py  test_react.py  test_scheduler.py  test_tts.py  test_wake_word.py
tools/: generate_debug_sprites.py  soak_monitor.py
